feat: use modal drawer finstead of DatePicker inline

--- a/packages/dnb-eufemia/src/components/date-picker/style/themes/dnb-date-picker-theme-ui.scss
+++ b/packages/dnb-eufemia/src/components/date-picker/style/themes/dnb-date-picker-theme-ui.scss
@@ -32,11 +32,11 @@
     }
   }
 
-  &__container {
-    @include defaultDropShadow();
-    border-radius: 0.25rem;
-    background-color: var(--color-white);
-  }
+  // &__container {
+  //   @include defaultDropShadow();
+  //   border-radius: 0.25rem;
+  //   background-color: var(--color-white);
+  // }
 
   &__addon,
   &__calendar {
@@ -162,11 +162,11 @@
     }
   }
 
-  &__triangle::before {
-    border: none;
-    background-color: var(--color-white);
-    @include defaultDropShadow();
-  }
+  // &__triangle::before {
+  //   border: none;
+  //   background-color: var(--color-white);
+  //   @include defaultDropShadow();
+  // }
 
   &__status--error:not(#{&}--opened)
     .dnb-form-label:hover
